--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Enny Rodriguez Developer</title>
+  <title>Enny R. Developer - Vnzla</title>
   <meta name="description" content="Enny Rodriguez  Software Developer.">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -53,6 +53,8 @@
 
 <p>Excellent communication skills</p>
 
+<p>Check out our <a href="https://www.femto.com.ve">Organization</a> for a quote or advice.</p>
+
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
@@ -63,11 +65,11 @@
     <footer>
       <div class="owner">
 
-      <p><a href="https://github.com/theelmix" class="avatar"><img src="https://avatars3.githubusercontent.com/u/6492593?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/theelmix">theelmix</a> on <a href="https://www.github.com">GitHub</a></p>
+      <p><a href="https://github.com/theelmix" class="avatar"><img src="https://avatars3.githubusercontent.com/u/6492593?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/theelmix">theelmix</a> on <a href="https://www.github.com/theelmix">GitHub coder</a></p>
 
       </div>
       <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://ennydev.com.ve/">Enny Rodríguez</a></small>
       </div>
     </footer>
   </div>
