--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
+          <a href="https://github.com/theelmix" class="avatar"><img src="https://avatars3.githubusercontent.com/u/6492593?v=3&amp;s=60" width="48" height="48"></a>
           <a href="https://github.com/theelmix" class="code">View Enny Rodriguez Developer on GitHub</a>
+          <a href="https://ve.linkedin.com/in/ennyrodriguez" class="code"> or Linkedin</a>
+
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
