--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 
 <p>Excellent communication skills</p>
 
-<p>Check out our <a href="https://www.femto.com.ve">Organization</a> for a quote or advice.</p>
+<p>Check out our <a href="https://www.femtosf.com">Organization</a> for a quote or advice.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages?, systems?, BI or Big Data Solutions? Check out our <a href="https://www.femto.com.ve">Organization</a> or <a href="https://ennydev.com.ve">contact support</a> and we’ll help you sort it out also ask for price quotation for your idea for a new app, web or system i can make that idea a real product for you!.</p>
+<p>Having trouble with Pages?, systems?, BI or Big Data Solutions? Check out our <a href="https://www.femtosf.com">Organization</a> or <a href="https://femtosf.com">contact support</a> and we’ll help you sort it out also ask for price quotation for your idea for a new app, web or system i can make that idea a real product for you!.</p>
         </article>
       </div>
     </div>
@@ -73,7 +73,7 @@
 
       </div>
       <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://ennydev.com.ve/">Enny Rodríguez</a></small>
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://femtosf.com/games">Enny Rodríguez</a></small>
       </div>
     </footer>
   </div>
